ENEX FSL/snapshotDownload (1)/objects/ServiceAppointment.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>FSL__Appointment_Grade__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Appointment Grade</label><precision>5</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Auto_Schedule__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Auto Schedule</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Duration_In_Minutes__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Duration In Minutes</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Emergency__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Emergency</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__GanttColor__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Color</label><length>7</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__GanttIcon__c</fullName><deprecated>false</deprecated><externalId>false</externalId><inlineHelpText>Introduzca una URL para un icono. La URL debe terminar con un sufijo de imagen, como .png.</inlineHelpText><label>Gantt Icon</label><length>2048</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></fields><fields><fullName>FSL__GanttLabel__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Label</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__Gantt_Display_Date__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Display Date</label><required>false</required><trackHistory>false</trackHistory><type>DateTime</type></fields><fields><fullName>FSL__InJeopardyReason__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>In Jeopardy Reason</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Delayed Start</fullName><default>false</default><label>Delayed Start</label></value><value><fullName>Delayed Finish</fullName><default>false</default><label>Delayed Finish</label></value><value><fullName>No Response</fullName><default>false</default><label>No Response</label></value><value><fullName>Due Date Approaching</fullName><default>false</default><label>Due Date Approaching</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__InJeopardy__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>In Jeopardy</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__InternalSLRGeolocation__c</fullName><deprecated>false</deprecated><displayLocationInDecimal>true</displayLocationInDecimal><externalId>false</externalId><label>Internal SLR Geolocation</label><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Location</type></fields><fields><fullName>FSL__IsFillInCandidate__c</fullName><defaultValue>true</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Is Fill In Candidate</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__IsMultiDay__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Is MultiDay</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__MDS_Calculated_length__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Multiday Work Calculated length</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__MDT_Operational_Time__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Multiday Work Operational Time</label><length>131072</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></fields><fields><fullName>FSL__Pinned__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Pinned</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Prevent Geocoding For Chatter Actions</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Related_Service__c</fullName><deleteConstraint>SetNull</deleteConstraint><deprecated>false</deprecated><externalId>false</externalId><label>Related Service</label><referenceTo>ServiceAppointment</referenceTo><relationshipLabel>Service Appointments</relationshipLabel><relationshipName>Service_Appointments</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>FSL__Same_Day__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Same Day</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Same_Resource__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Same Resource</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Schedule_Mode__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Schedule Mode</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Manual</fullName><default>false</default><label>Manual</label></value><value><fullName>Automatic</fullName><default>false</default><label>Automatic</label></value><value><fullName>Optimization</fullName><default>false</default><label>Optimization</label></value><value><fullName>None</fullName><default>true</default><label>None</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Schedule Over Lower Priority Appointment</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Scheduling_Policy_Used__c</fullName><deleteConstraint>SetNull</deleteConstraint><deprecated>false</deprecated><externalId>false</externalId><label>Scheduling Policy Used</label><referenceTo>FSL__Scheduling_Policy__c</referenceTo><relationshipLabel>Service Appointments</relationshipLabel><relationshipName>Service_Appointments</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>FSL__Time_Dependency__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Time Dependency</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Same Start</fullName><default>false</default><label>Same Start</label></value><value><fullName>Start After Finish</fullName><default>false</default><label>Start After Finish</label></value><value><fullName>Finish Before Start</fullName><default>false</default><label>Finish Before Start</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__UpdatedByOptimization__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>UpdatedByOptimization</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Use_Async_Logic__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Use Async Logic</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Virtual Service For Chatter Action (SLR)</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><listViews><fullName>Citas_SGME</fullName><columns>Name</columns><columns>ParentRecord</columns><columns>ParentRecordType</columns><columns>Status</columns><columns>ArrivalWindowStartTime</columns><columns>ArrivalWindowEndTime</columns><filterScope>Everything</filterScope><filters><field>ServiceTerritory</field><operation>contains</operation><value>SGME</value></filters><label>Citas SGME</label><language>es</language><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>Citas_SGMM</fullName><columns>Name</columns><columns>ParentRecord</columns><columns>ParentRecordType</columns><columns>Status</columns><columns>ArrivalWindowStartTime</columns><columns>ArrivalWindowEndTime</columns><filterScope>Everything</filterScope><filters><field>ServiceTerritory</field><operation>contains</operation><value>SGMM</value></filters><label>Citas SGMM</label><language>es</language><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><listViews><fullName>My_ServiceAppointments</fullName><filterScope>Mine</filterScope><label>Mis citas de servicios</label></listViews><sharingModel>ReadWrite</sharingModel><validationRules><fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName><active>false</active><description>Don&apos;t allow creation of service with status scheduled or  dispatched</description><errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula><errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage></validationRules><validationRules><fullName>FSL__Related_Service_with_time_dependency</fullName><active>true</active><description>If related service is not empty then time dependency is not empty</description><errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula><errorMessage>Select a valid dependency type. If the appointments must be assigned to the same resource, the dependency type can’t be Same Start.</errorMessage></validationRules><validationRules><fullName>FSL__Same_Resource_Same_Start</fullName><active>true</active><description>Can&apos;t be same start and same reosurce</description><errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula><errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage></validationRules><validationRules><fullName>FSL__Schedule_End_Required</fullName><active>true</active><errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula><errorDisplayField>SchedEndTime</errorDisplayField><errorMessage>Both scheduled start and end are required</errorMessage></validationRules><validationRules><fullName>FSL__Schedule_Start_Required</fullName><active>true</active><errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula><errorDisplayField>SchedStartTime</errorDisplayField><errorMessage>Both scheduled start and end are required</errorMessage></validationRules><validationRules><fullName>FSL__Service_Color_HEX_Format</fullName><active>true</active><errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula><errorDisplayField>FSL__GanttColor__c</errorDisplayField><errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage></validationRules><validationRules><fullName>FSL__Time_dependency_with_related_service</fullName><active>true</active><errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula><errorDisplayField>FSL__Related_Service__c</errorDisplayField><errorMessage>Please select Related Service.</errorMessage></validationRules><validationRules><fullName>FSL__isDueDateExist</fullName><active>false</active><description>Check if DueDate field exist on service appointment.</description><errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula><errorDisplayField>DueDate</errorDisplayField><errorMessage>DueDate field is required</errorMessage></validationRules><validationRules><fullName>FSL__isDurationExist</fullName><active>true</active><description>Check if Duration field exist on service appointment.</description><errorConditionFormula>ISNULL(Duration)</errorConditionFormula><errorDisplayField>Duration</errorDisplayField><errorMessage>Duration field is required</errorMessage></validationRules><validationRules><fullName>FSL__isEarliestStartTimeExist</fullName><active>false</active><description>Check if EarliestStartTime field exist on service appointment.</description><errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula><errorDisplayField>EarliestStartTime</errorDisplayField><errorMessage>EarliestStartTime field is required</errorMessage></validationRules><validationRules><fullName>FSL__startTimeShouldPrecedeEndTime</fullName><active>false</active><errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula><errorDisplayField>SchedStartTime</errorDisplayField><errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage></validationRules></CustomObject>